--- a/list.html
+++ b/list.html
@@ -82,5 +82,70 @@
 width="500" title="Iframe">
 </iframe>
 <a href ="list.html" target="iframe1"> W3school</a>
+
+<form>
+    <label for="fname">firstname:</label><br>
+    <input type="text" id="fname" name="fname"><br>
+    <label for="Iname">lastname:</label><br>
+    <input type="text" id="lname" name="lname"><br>
+</form>
+<form>
+    <input type="checkbox" id="vechile1" name="vechile1" value="Bike">
+    <lable for="vechicle1">I have a bike></lable><br>
+    <input type="checkbox" id="vechile2" name="vechicle2" value="car">
+    <lable for="vechicle2">I have a car></lable><br>
+    <input type="checkbox" id="vechile3" name="vechicle3" value="Boat">
+<label for="vechicle3"> I have a boat</label>
+
+</form>
+
+<h1>User registeration form:</h1>
+<br>
+<form action="test.html" method="post">
+    <label> first name </label>
+    <input type="text"name="firstname" size="15"/> <br><br>
+    <label> Lastname: </label>
+    <input type="text"name="lastname" size="15"/> <br><br>
+    <label> phone: <lable/>
+        <input type="text" name="phone no" size="10"> <br> <br>
+        <label> Address: <lable/>
+            <input type="text" name="Address" size="10"> <br> <br>
+            <lable> date of birth</lable>
+            <input type="date" name="DOB" size="45"> <br> <br>
+
+            <label> Email: <lable/>
+                <input type="E-mail" name="Email" size="40"> <br> <br>
+                <label> password: <lable/>
+                    <input type="password" name="password" size="50"> <br> <br>
+            <br>
+    <br>
+    <label>courses:</label>
+    <select>
+        <option value="course">Course</option>
+        <option value="BCA">BCA</option>
+        <option value="BBA">BBA</option>
+        <option value="B.TECH">B.Tech</option>
+        <option value="MBA">MBA</option>
+        <option value="MCA">MCA</option>
+        <option value="B.TECH">B.TECH</option>
+        <option value="Bsc.Csit">Bsc.csit</option>
+    </select>
+    <br>
+    <br>
+    <lable> Gender:</lable><br>
+    <input type="radio" name="gender"/> male <br>
+    <input type="radio" name="gender"/> female <br>
+    <input type="radio" name="gender"/> other<br>
+<label>Hobbies:</label>
+<br>
+<input type="checkbox" name="programming"> programming <br>
+<input type="checkbox" name="web technology"> web technology <br>
+<input type="checkbox" name="nothing please"> Nothing please <br>
+<br>
+<textarea cols="80" rows="5"></textarea><br>
+<button type="submit"value="submit">submit</button>
+<button type="reset" value="reset">reset</button>
+<input type="color" name=""id="">
+</form>
     </body>
     </html>
